--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ coverage
 .DS_Store
 
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
