--- a/config/database.yml
+++ b/config/database.yml
@@ -26,5 +26,10 @@ test:
   database: db/bespoke_test
 
 production:
-  <<: *default
-  database: db/bespoke_production
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
